<resources>
    <string name="app_name">MedicineApp</string>
    <string name="menu_header_text">Navigation</string>
    <string name="menu_nearest">Nearest</string>
    <string name="menu_config">Configure</string>
    <string name="action_settings">Settings</string>
    <string name="menu_configure">Configure</string>
    <string name="input_medName">Medicine name</string>
    <string name="input_save">Save</string>
    <string name="fragment_addnew">AddNew</string>
    <string name="input_dosecount">Dose</string>
    <string name="input_startday">First day of course</string>
    <string name="input_courselength">Course length (days)</string>
    <string name="set_time_button">Set time</string>
    <string name="calcel_alarms">InfoTable count</string>
</resources>