<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context=".fragments.configure.AddNewFragment">

    <Button
        android:id="@+id/dailycount_decrement_button"
        android:layout_width="50dp"
        android:layout_height="26dp"
        android:background="@android:drawable/arrow_down_float"
        app:layout_constraintStart_toStartOf="@+id/dailycount_increment_button"
        app:layout_constraintTop_toBottomOf="@+id/dailycount_increment_button" />

    <EditText
        android:id="@+id/newcourse_medname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/input_medName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/newcourse_doseinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/input_dosecount"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newcourse_medname" />

    <EditText
        android:id="@+id/newcourse_startday"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:hint="@string/input_startday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newcourse_doseinfo" />

    <EditText
        android:id="@+id/newcourse_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/input_courselength"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newcourse_doseinfo" />

    <EditText
        android:id="@+id/newcourse_dailycount"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/dailycount_increment_button"
        app:layout_constraintTop_toBottomOf="@+id/newcourse_length" />

    <Button
        android:id="@+id/dailycount_increment_button"
        android:layout_width="50dp"
        android:layout_height="26dp"
        android:layout_marginEnd="20dp"
        android:background="@android:drawable/arrow_up_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newcourse_dailycount" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:text="@string/input_save"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_time_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="Daily count: "
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/newcourse_dailycount"
        app:layout_constraintEnd_toStartOf="@+id/newcourse_dailycount" />

    <Button
        android:id="@+id/set_time_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/set_time_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newcourse_dailycount" />

</androidx.constraintlayout.widget.ConstraintLayout>